--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: caschooldata
 Title: Fetch and Process California School Data
 Version: 0.1.0
 Authors@R:
-    person("Al", "Martin", , "almartin@example.com", role = c("aut", "cre"))
+    person("Andy", "Martin", , "almartin@gmail.com", role = c("aut", "cre"))
 Description: Downloads and processes school data from the California Department
     of Education (CDE). Provides functions for fetching enrollment data and
     transforming it into tidy format for analysis.
