--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(clear_enr_cache)
 export(enr_grade_aggs)
 export(fetch_enr)
 export(fetch_enr_multi)
+export(get_available_years)
 export(id_enr_aggs)
 export(parse_cds_code)
 export(tidy_enr)
