--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,8 +3,9 @@ pkgdown: 2.2.0
 pkgdown_sha: ~
 articles:
   data-quality-qa: data-quality-qa.html
+  district-highlights: district-highlights.html
   quickstart: quickstart.html
-last_built: 2025-12-30T18:03Z
+last_built: 2026-01-02T03:36Z
 urls:
   reference: https://almartin82.github.io/caschooldata/reference
   article: https://almartin82.github.io/caschooldata/articles
