--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,6 +2,8 @@ Package: caschooldata
 Title: California School Data
 Version: 0.1.0
 Authors@R:
+Author: Al Martin [aut, cre]
+Maintainer: Al Martin <almartin@example.com>
     person("Andy", "Martin", , "almartin@gmail.com", role = c("aut", "cre"))
 Description: A simple, consistent interface for accessing California
     school data in Python and R.
