--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: caschooldata
 Title: California School Data
 Version: 0.1.0
-Author: Al Martin [aut, cre]
-Maintainer: Al Martin <almartin@example.com>
+Author: Andy Martin [aut, cre]
+Maintainer: Andy Martin <almartin@gmail.com>
 Authors@R:
     person("Andy", "Martin", , "almartin@gmail.com", role = c("aut", "cre"))
 Description: A simple, consistent interface for accessing California
@@ -26,6 +26,7 @@ Suggests:
     rmarkdown,
     ggplot2,
     httr,
+    readxl,
     scales,
     tidyr
 VignetteBuilder: knitr
