Fix: Add missing imports and enable vignette evaluation
- Add readxl and httr to Imports in DESCRIPTION
- Enable eval=TRUE in district-highlights vignette
- Update README to use pkgdown image URLs instead of man/figures/

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,9 +14,11 @@ Depends:
 Imports:
     dplyr,
     downloader,
+    httr,
     purrr,
     rappdirs,
     readr,
+    readxl,
     rlang
 Suggests:
     testthat (>= 3.0.0),
