Add graduation rate analysis vignette
- Add comprehensive graduation rate analysis vignette
- Cover statewide trends, county comparisons, demographic disparities
- Show cohort type analysis and district-level insights
- Update _pkgdown.yml to include new vignette

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -30,6 +30,8 @@ navbar:
         href: articles/quickstart.html
       - text: "District Trends & Demographics"
         href: articles/district-highlights.html
+      - text: "Graduation Rate Analysis"
+        href: articles/graduation-rates.html
       - text: Data Quality QA
         href: articles/data-quality-qa.html
 
